--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ window.onload=function(){
 	<div style="background-image:url('tempfaixa.jpg');background-position:center;background-size:cover;width:100%;height:890px;">
 	</div>
 	
-	<div style="position:relative;width:100%;height:1740px; overflow:hidden;">
+	<div style="position:relative;width:100%;height:1700px; overflow:hidden;">
 	<div style="background-color:white; height:400px;" class="center">
 		<div style="position:absolute; top:400px;right:calc(50% + 30px); width:500px">
 			<div style=" font-size:20pt; font-weight:600;">
@@ -630,7 +630,7 @@ window.onload=function(){
 			</div>
 		</div>
 		<div style="position:absolute; top:1000px;right:calc(50% - 20px);border-radius:20px;width:600px;height:600px;text-align:center;overflow:hidden;">
-			<img style="height:600px" src="imgs/turma_microsom.jpg">
+			<img style="height:600px;margin-left:-320px;" src="imgs/turma_microsom.jpg">
 		</div>
 	</div>
 	</div>
