--- a/index.html
+++ b/index.html
@@ -591,18 +591,9 @@ window.onload=function(){
 	<div class="description">para facilitar a sua vida.</div>
 	<br/>
   </div>
-	</div></div>
-	  
-	  
-	  
-	  
-	  
-	  
-	  
-	  
-	  
-	<a class="slick-prev" style="display: inline;"><img src="slider/botao_l.png"></a><a class="slick-next" style="display: inline;"><img src="slider/botao_r.png"></a></div>
 	</div>
+	</div>
+	  
 	
 	
 	<div style="background-image:url('tempfaixa.jpg');background-position:center;background-size:cover;width:100%;height:890px;">
