--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ window.onload=function(){
 		</div>
 	</div>
 	
-	<div style="width:100%; overflow:hidden;">
+	<div style="width:100%; overflow:hidden; height:600px">
 	<br><br>
 	<div class="modelos">
   <div class="slide">
@@ -626,8 +626,8 @@ window.onload=function(){
 	</div>
 	</div>
 	
-	
-	<div class="col4" style="background-color:#1b4279; padding:60px;color:white;">
+	<div style="background-color:#1b4279; padding:60px;color:white;">
+	<div class="col4" style="color:white; max-width:1200px; margin:auto">
 		<div class="col4sub" style="padding:15px;">
 				<div style="font-size:20px">A Microsom</div>
 				<div style="width:100%;border-bottom:3px solid white;margin:auto;height:10px;"></div>
@@ -675,8 +675,9 @@ window.onload=function(){
 				<div><a href=".html" style="color:white;text-decoration:none;">Conte sua Experiência</a></div>
 		</div>
 	</div>
+	</div>
 	<div style="background-color:#1b4279;width:100%;height:120px;text-align:center;color:white">
-		<div style="width:80%;border-bottom:3px solid #102e59;margin:auto;height:10px;"></div>
+		<div style="width:950px;border-bottom:3px solid #102e59;margin:auto;height:10px;"></div>
 		<br/>Matriz - Rua Francisco Marengo 941 - Tatuapé - São Paulo - SP - contato@microsom.com.br - Tel.: 11 2789 2400<br/><br/>Copyright 2017 :: Microsom - Soluções em Aparelhos Auditivos, Gagueira e Zumbido :: Todos os direitos reservados ::
 	</div>
 
